Updates to match changelog status

--- a/app/views/layinghens/current/details/consent.html
+++ b/app/views/layinghens/current/details/consent.html
@@ -32,7 +32,7 @@
 
         {% if data['waitlist-enabled'] == 'true' and data['project-type'] == 'veranda' %}
           {{ govukInsetText ({
-            text: 'I understand that the RPA will award the grant funding for adding a veranda only to existing housing on a first-come-first-served basis'
+            text: 'I understand that the RPA will award the grant funding for adding a veranda only to an existing housing on a first come first served basis'
           }) }}
         {% endif %}
 
