--- a/app/views/layinghens/current/eligibility/biosecurity/egg-store.html
+++ b/app/views/layinghens/current/eligibility/biosecurity/egg-store.html
@@ -29,7 +29,7 @@
                         }
                     },
                     hint: {
-                        text: 'This must be separate from the main entrance lobby and connected changing area.'
+                        text: 'This must be separate from the main entrance lobby and connected changing area'
                     },
                     items: [
                         {
@@ -66,7 +66,7 @@
                 <span class="app-step-nav-related__pretitle">Eligibility</span>
                 </h2>
                 <p>
-                    You must be able to remove eggs and deliver empty egg trays to and from the building's egg store without going into the building's main entrance lobby or connected changing area.
+                    You must be able to remove eggs and deliver empty egg trays to and from the building’s egg store without going into the building’s main entrance lobby or connected changing area.
                 </p>
             </div>
 
