--- a/app/views/layinghens/current/eligibility/veranda/waitlist.html
+++ b/app/views/layinghens/current/eligibility/veranda/waitlist.html
@@ -17,7 +17,7 @@
                 </h1>
 
                 <p>
-                    The veranda grant funding is given on a first come, first served basis. We are not currently accepting applications for veranda grant funding.
+                    The veranda grant funding is awarded on a first come, first served basis. We are not currently accepting applications for veranda grant funding.
                 </p>
 
                 <p>
