--- a/app/views/layinghens/current/scoring/grip.html
+++ b/app/views/layinghens/current/scoring/grip.html
@@ -33,7 +33,7 @@
                         }
                     },
                     hint: {
-                        text: 'You can replace an aviary’s standard circular metal perches with perches that have design features to help birds grip them (for example, a ridged surface, comfortable material or coating)'
+                        text: 'Additional design features (for example, a ridged surface, comfortable material or coating) you can add to the circular metal perches that are often standard in aviary systems'
                     },
                     items: [
                         {
