--- a/app/views/layinghens/v2/eligibility/biosecurity/elim-concrete-apron.html
+++ b/app/views/layinghens/v2/eligibility/biosecurity/elim-concrete-apron.html
@@ -15,11 +15,7 @@
                 <h1 class="govuk-heading-l">You cannot apply for a grant from this scheme</h1>
 
                 <p>
-                    The building and veranda must be surrounded by a continuous strip of concrete.
-                </p>
-
-                <p>
-                    If there is no range next to the building, there must also be a concrete apron around the veranda.
+                    The building must be surrounded by a continuous strip of concrete.
                 </p>
 
                 <p>
