--- a/app/views/layinghens/v2/scoring/interruption.html
+++ b/app/views/layinghens/v2/scoring/interruption.html
@@ -1,7 +1,7 @@
 {% extends 'layinghens/current/views/layouts/layout.html' %}
 
 {% block pageTitle %}
-    Check if your project is eligible for a grant
+    Your project meets the eligibility criteria to apply for this grant
 {% endblock %}
 
 {% block content %}
@@ -11,12 +11,11 @@
             <div class="govuk-grid-column-two-thirds">
 
                 <h1 class="govuk-heading-l">
-                    Your project meets the minimum criteria to apply for this grant
+                    Your project meets the eligibility criteria to apply for this grant
                 </h1>
 
                 <p>
                    You are eligible to apply for this grant.
-
                 </p>
 
                  {{ govukInsetText ({
@@ -29,7 +28,6 @@
 
                 <p>
                     The next questions will score your project against the funding priorities of the grant.
-
                 </p>
 
                  <p>
